@@ -30,7 +30,7 @@ $published = $this->state->get('filter.published');
 					<?php echo JText::_('COM_MENUS_BATCH_MENU_LABEL'); ?>
 				</label>
 					<select name="batch[menu_id]" class="inputbox" id="batch-menu-id">
-						<option></option>
+						<option value=""><?php echo JText::_('JSELECT') ?></option>
 						<?php echo JHtml::_('select.options', JHtml::_('menu.menuitems', array('published' => $published)));?>
 					</select>
 					<?php echo JHTML::_( 'select.radiolist', $options, 'batch[move_copy]', '', 'value', 'text', 'm'); ?>
